PROJECT_VERSION loses leading 0s in version numbers
cmake_minimum_required (VERSION 3.14)
set (KDE_APPLICATIONS_VERSION "19.08.0")
project(dummy VERSION ${KDE_APPLICATIONS_VERSION})
MESSAGE(${PROJECT_VERSION})
MESSAGE(${KDE_APPLICATIONS_VERSION})
I get 19.8.0 for the first one and 19.08.0 for the second one
I guess for some people that is fine but for us the 08 is the month of release, so it looks much better if the 0 is there.
Besides the look&feel we're also using that version number to match against the bugzilla version number that has the 0 and it fails if it's different.
It's not urgent for us since we've just switched all the projects to use KDE_APPLICATIONS_VERSION instead of PROJECT_VERSION but i think it would make sense if project() could be made to respect whatever was passed in.
Edited by Brad King