Source/cmPolicies.h
@@ -283,7 +283,10 @@ class cmMakefile;
   SELECT(POLICY, CMP0095,                                                     \
          "RPATH entries are properly escaped in the intermediary CMake "      \
          "install script.",                                                   \
-         3, 16, 0, cmPolicies::WARN)
+         3, 16, 0, cmPolicies::WARN)                                          \
+  SELECT(POLICY, CMP0096,                                                     \
+         "project() preserves leading zeros in version components.", 3, 16,   \
+         0, cmPolicies::WARN)
 
 #define CM_SELECT_ID(F, A1, A2, A3, A4, A5, A6) F(A1)
 #define CM_FOR_EACH_POLICY_ID(POLICY)                                         \
